--- a/deliver/RNPI-indice.ipynb
+++ b/deliver/RNPI-indice.ipynb
@@ -109,7 +109,7 @@
     "#### Introdução ao Keras\n",
     "- Conceitos novos:\n",
     "- Prática: Keras, criando o modelo, colocando pesos, retirando pesos e retirando camadas\n",
-    " * NB: [Introdução ao Keras](Introdução-CNN-Keras.ipynb)\n",
+    " * NB: [Introdução ao Keras](Introdução-CNN-Keras.ipynb)\n",
     "\n",
     "#### CIFAR-10\n",
     "- Conceitos novos:\n",
@@ -215,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
