--- a/deliver/Introdução-CNN-Keras.ipynb
+++ b/deliver/Introdução-CNN-Keras.ipynb
@@ -39,20 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using Theano backend.\n",
-      "Using gpu device 0: Tesla K40c (CNMeM is disabled, cuDNN Version is too old. Update to v5, was 2000.)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -73,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +215,7 @@
       "____________________________________________________________________________________________________\n",
       "Layer (type)                     Output Shape          Param #     Connected to                     \n",
       "====================================================================================================\n",
-      "conv1 (Convolution2D)            (None, 3, 4, 4)       15          convolution2d_input_6[0][0]      \n",
+      "conv1 (Convolution2D)            (None, 3, 4, 4)       15          convolution2d_input_3[0][0]      \n",
       "____________________________________________________________________________________________________\n",
       "actv1 (Activation)               (None, 3, 4, 4)       0           conv1[0][0]                      \n",
       "____________________________________________________________________________________________________\n",
@@ -237,6 +228,8 @@
       "out_sig (Activation)             (None, 1)             0           dense1[0][0]                     \n",
       "====================================================================================================\n",
       "Total params: 28\n",
+      "Trainable params: 28\n",
+      "Non-trainable params: 0\n",
       "____________________________________________________________________________________________________\n",
       "None\n"
      ]
@@ -323,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
